[package]
name = "step_function_parser"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.8.1"
lambda_runtime = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.8"
tokio = { version = "1", features = ["macros"] }
log = "0.4.20"
simple-logging = "2.0.2"
tracing-subscriber = "0.3.17"
